app.py to analyze using web scraping

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -64,6 +64,143 @@
     "print(f\"Question: {question}\")\n",
     "print(f\"Predicted Answer: {pred.answer}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Fetching insights for guava ---\n",
+      "🌐 Scraping official site: https://github.com/google/guava\n",
+      "[SECURITY] https://github.com/google/guava/security\n",
+      "[RELEASE] https://github.com/google/guava/releases\n",
+      "[MIGRATION] https://github.com/google/guava/wiki/Migration-Guide\n",
+      "\n",
+      "--- Fetching insights for okhttp ---\n",
+      "🌐 Scraping official site: https://github.com/square/okhttp\n",
+      "[SECURITY] https://github.com/square/okhttp/security\n",
+      "[RELEASE] https://github.com/square/okhttp/releases\n",
+      "[MIGRATION] https://github.com/square/okhttp/wiki/Migration-Guide\n",
+      "\n",
+      "--- Fetching insights for commons-lang3 ---\n",
+      "🌐 Scraping official site: https://commons.apache.org/proper/commons-lang/\n",
+      "[SECURITY] https://commons.apache.org/security.html\n",
+      "[RELEASE] https://commons.apache.org/proper/commons-lang/changes-report.html\n",
+      "[MIGRATION] https://commons.apache.org/proper/commons-lang/article3_0.html\n",
+      "\n",
+      "--- Fetching insights for hibernate-core ---\n",
+      "🌐 Scraping official site: https://hibernate.org/orm/\n",
+      "[SECURITY] https://access.redhat.com/security/team/contact/\n",
+      "[RELEASE] https://hibernate.org/repositories/releases/\n",
+      "[MIGRATION] https://hibernate.org/orm/documentation/migrate/\n",
+      "\n",
+      "--- Fetching insights for flyway-core ---\n",
+      "🌐 Scraping official site: https://flywaydb.org/\n",
+      "[🔄] Fallback: Checking Maven Repository → https://repo1.maven.org/maven2/org/flywaydb/flyway-core/\n",
+      "[RELEASE] https://flywaydb.org/products/test-data-manager\n",
+      "[MAVEN_REPO] https://repo1.maven.org/maven2/org/flywaydb/flyway-core/\n",
+      "\n",
+      "--- Fetching insights for bcprov-jdk15on ---\n",
+      "🌐 Scraping official site: https://www.bouncycastle.org/\n",
+      "[🔄] Fallback: Checking Maven Repository → https://repo1.maven.org/maven2/org/bouncycastle/bcprov-jdk15on/\n",
+      "[MAVEN_REPO] https://repo1.maven.org/maven2/org/bouncycastle/bcprov-jdk15on/\n",
+      "[DOCS] https://www.bouncycastle.org/documentation.html\n",
+      "\n",
+      "--- Done Testing ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "# Test dependencies\n",
+    "dependencies = [\n",
+    "    {\"group_id\": \"com.google.guava\", \"artifact_id\": \"guava\", \"homepage\": \"https://github.com/google/guava\"},\n",
+    "    {\"group_id\": \"com.squareup.okhttp3\", \"artifact_id\": \"okhttp\", \"homepage\": \"https://github.com/square/okhttp\"},\n",
+    "    {\"group_id\": \"org.apache.commons\", \"artifact_id\": \"commons-lang3\", \"homepage\": \"https://commons.apache.org/proper/commons-lang/\"},\n",
+    "    {\"group_id\": \"org.hibernate\", \"artifact_id\": \"hibernate-core\", \"homepage\": \"https://hibernate.org/orm/\"},\n",
+    "    {\"group_id\": \"org.flywaydb\", \"artifact_id\": \"flyway-core\", \"homepage\": \"https://flywaydb.org/\"},\n",
+    "    {\"group_id\": \"org.bouncycastle\", \"artifact_id\": \"bcprov-jdk15on\", \"homepage\": \"https://www.bouncycastle.org/\"}\n",
+    "]\n",
+    "\n",
+    "# Common changelog filenames for GitHub projects\n",
+    "CHANGELOG_FILENAMES = [\"CHANGELOG.md\", \"CHANGELOG.txt\", \"docs/changelog.md\", \"HISTORY.md\", \"RELEASE-NOTES.md\"]\n",
+    "\n",
+    "def fetch_dependency_insights(dep):\n",
+    "    dep_name = dep[\"artifact_id\"]\n",
+    "    homepage_url = dep[\"homepage\"]\n",
+    "    group_id = dep[\"group_id\"]\n",
+    "    print(f\"\\n--- Fetching insights for {dep_name} ---\")\n",
+    "    print(f\"🌐 Scraping official site: {homepage_url}\")\n",
+    "\n",
+    "    insights = {}\n",
+    "\n",
+    "    # GitHub-based projects\n",
+    "    if \"github.com\" in homepage_url:\n",
+    "        repo_path = homepage_url.replace(\"https://github.com/\", \"\").strip(\"/\")\n",
+    "        insights[\"SECURITY\"] = f\"https://github.com/{repo_path}/security\"\n",
+    "        insights[\"RELEASE\"] = f\"https://github.com/{repo_path}/releases\"\n",
+    "        insights[\"MIGRATION\"] = f\"https://github.com/{repo_path}/wiki/Migration-Guide\"\n",
+    "\n",
+    "        # Check for changelogs\n",
+    "        for file in CHANGELOG_FILENAMES:\n",
+    "            changelog_url = f\"https://github.com/{repo_path}/blob/main/{file}\"\n",
+    "            response = requests.head(changelog_url)\n",
+    "            if response.status_code == 200:\n",
+    "                insights[\"CHANGELOG\"] = changelog_url\n",
+    "                break\n",
+    "\n",
+    "    else:\n",
+    "        # General scraping for non-GitHub dependencies\n",
+    "        try:\n",
+    "            response = requests.get(homepage_url, timeout=5)\n",
+    "            if response.status_code == 200:\n",
+    "                soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "                links = {a.text.strip().lower(): urljoin(homepage_url, a[\"href\"]) for a in soup.find_all(\"a\", href=True)}\n",
+    "\n",
+    "                # Match links based on keywords\n",
+    "                keyword_map = {\n",
+    "                    \"SECURITY\": [\"security\", \"vulnerabilities\", \"cve\"],\n",
+    "                    \"RELEASE\": [\"release\", \"changelog\", \"changes\"],\n",
+    "                    \"MIGRATION\": [\"migration\", \"upgrade\"]\n",
+    "                }\n",
+    "\n",
+    "                for category, keywords in keyword_map.items():\n",
+    "                    for keyword in keywords:\n",
+    "                        for link_text, link_url in links.items():\n",
+    "                            if keyword in link_text:\n",
+    "                                insights[category] = link_url\n",
+    "                                break\n",
+    "\n",
+    "        except requests.RequestException:\n",
+    "            print(f\"[❌] Failed to fetch {homepage_url}\")\n",
+    "\n",
+    "    # ✅ **Fallback Mechanism**\n",
+    "    if not insights.get(\"RELEASE\") or not insights.get(\"SECURITY\"):\n",
+    "        fallback_maven_url = f\"https://repo1.maven.org/maven2/{group_id.replace('.', '/')}/{dep_name}/\"\n",
+    "        print(f\"[🔄] Fallback: Checking Maven Repository → {fallback_maven_url}\")\n",
+    "        insights[\"MAVEN_REPO\"] = fallback_maven_url\n",
+    "\n",
+    "    if dep_name.startswith(\"bcprov\"):  # Special case for BouncyCastle\n",
+    "        insights[\"DOCS\"] = \"https://www.bouncycastle.org/documentation.html\"\n",
+    "\n",
+    "    # Print results\n",
+    "    for category, link in insights.items():\n",
+    "        print(f\"[{category.upper()}] {link}\")\n",
+    "\n",
+    "# Run for all test dependencies\n",
+    "for dep in dependencies:\n",
+    "    fetch_dependency_insights(dep)\n",
+    "\n",
+    "print(\"\\n--- Done Testing ---\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
