app.py takes local directory path

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -67,49 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- Fetching insights for guava ---\n",
-      "🌐 Scraping official site: https://github.com/google/guava\n",
-      "[SECURITY] https://github.com/google/guava/security\n",
-      "[RELEASE] https://github.com/google/guava/releases\n",
-      "[MIGRATION] https://github.com/google/guava/wiki/Migration-Guide\n",
-      "\n",
-      "--- Fetching insights for okhttp ---\n",
-      "🌐 Scraping official site: https://github.com/square/okhttp\n",
-      "[SECURITY] https://github.com/square/okhttp/security\n",
-      "[RELEASE] https://github.com/square/okhttp/releases\n",
-      "[MIGRATION] https://github.com/square/okhttp/wiki/Migration-Guide\n",
-      "\n",
-      "--- Fetching insights for commons-lang3 ---\n",
-      "🌐 Scraping official site: https://commons.apache.org/proper/commons-lang/\n",
-      "[SECURITY] https://commons.apache.org/security.html\n",
-      "[RELEASE] https://commons.apache.org/proper/commons-lang/changes-report.html\n",
-      "[MIGRATION] https://commons.apache.org/proper/commons-lang/article3_0.html\n",
-      "\n",
-      "--- Fetching insights for hibernate-core ---\n",
-      "🌐 Scraping official site: https://hibernate.org/orm/\n",
-      "[SECURITY] https://access.redhat.com/security/team/contact/\n",
-      "[RELEASE] https://hibernate.org/repositories/releases/\n",
-      "[MIGRATION] https://hibernate.org/orm/documentation/migrate/\n",
-      "\n",
-      "--- Fetching insights for flyway-core ---\n",
-      "🌐 Scraping official site: https://flywaydb.org/\n",
-      "[🔄] Fallback: Checking Maven Repository → https://repo1.maven.org/maven2/org/flywaydb/flyway-core/\n",
-      "[RELEASE] https://flywaydb.org/products/test-data-manager\n",
-      "[MAVEN_REPO] https://repo1.maven.org/maven2/org/flywaydb/flyway-core/\n",
-      "\n",
-      "--- Fetching insights for bcprov-jdk15on ---\n",
-      "🌐 Scraping official site: https://www.bouncycastle.org/\n",
-      "[🔄] Fallback: Checking Maven Repository → https://repo1.maven.org/maven2/org/bouncycastle/bcprov-jdk15on/\n",
-      "[MAVEN_REPO] https://repo1.maven.org/maven2/org/bouncycastle/bcprov-jdk15on/\n",
-      "[DOCS] https://www.bouncycastle.org/documentation.html\n",
+      "[⚠️] No homepage found for guava. Skipping...\n",
+      "[⚠️] No homepage found for okhttp. Skipping...\n",
+      "[⚠️] No homepage found for commons-lang3. Skipping...\n",
+      "[⚠️] No homepage found for hibernate-core. Skipping...\n",
+      "[⚠️] No homepage found for flyway-core. Skipping...\n",
+      "[⚠️] No homepage found for bcprov-jdk15on. Skipping...\n",
       "\n",
       "--- Done Testing ---\n"
      ]
@@ -122,82 +92,156 @@
     "\n",
     "# Test dependencies\n",
     "dependencies = [\n",
-    "    {\"group_id\": \"com.google.guava\", \"artifact_id\": \"guava\", \"homepage\": \"https://github.com/google/guava\"},\n",
-    "    {\"group_id\": \"com.squareup.okhttp3\", \"artifact_id\": \"okhttp\", \"homepage\": \"https://github.com/square/okhttp\"},\n",
-    "    {\"group_id\": \"org.apache.commons\", \"artifact_id\": \"commons-lang3\", \"homepage\": \"https://commons.apache.org/proper/commons-lang/\"},\n",
-    "    {\"group_id\": \"org.hibernate\", \"artifact_id\": \"hibernate-core\", \"homepage\": \"https://hibernate.org/orm/\"},\n",
-    "    {\"group_id\": \"org.flywaydb\", \"artifact_id\": \"flyway-core\", \"homepage\": \"https://flywaydb.org/\"},\n",
-    "    {\"group_id\": \"org.bouncycastle\", \"artifact_id\": \"bcprov-jdk15on\", \"homepage\": \"https://www.bouncycastle.org/\"}\n",
+    "    {\"group_id\": \"com.google.guava\", \"artifact_id\": \"guava\"},\n",
+    "    {\"group_id\": \"com.squareup.okhttp3\", \"artifact_id\": \"okhttp\"},\n",
+    "    {\"group_id\": \"org.apache.commons\", \"artifact_id\": \"commons-lang3\"},\n",
+    "    {\"group_id\": \"org.hibernate\", \"artifact_id\": \"hibernate-core\"},\n",
+    "    {\"group_id\": \"org.flywaydb\", \"artifact_id\": \"flyway-core\"},\n",
+    "    {\"group_id\": \"org.bouncycastle\", \"artifact_id\": \"bcprov-jdk15on\"}\n",
     "]\n",
     "\n",
-    "# Common changelog filenames for GitHub projects\n",
-    "CHANGELOG_FILENAMES = [\"CHANGELOG.md\", \"CHANGELOG.txt\", \"docs/changelog.md\", \"HISTORY.md\", \"RELEASE-NOTES.md\"]\n",
+    "def get_homepage_from_maven(group_id, artifact_id):\n",
+    "    \"\"\"Fetch correct homepage URL from Maven Search API or fallback to MvnRepository.\"\"\"\n",
+    "    search_url = f\"https://search.maven.org/solrsearch/select?q=g:%22{group_id}%22+AND+a:%22{artifact_id}%22&rows=1&wt=json\"\n",
+    "    \n",
+    "    try:\n",
+    "        response = requests.get(search_url, timeout=5)\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        if \"response\" in data and data[\"response\"][\"docs\"]:\n",
+    "            doc = data[\"response\"][\"docs\"][0]\n",
+    "            homepage_url = doc.get(\"homepage\", None)\n",
+    "            if homepage_url:\n",
+    "                return homepage_url  # ✅ Found real homepage from API\n",
+    "        \n",
+    "    except requests.RequestException as e:\n",
+    "        print(f\"[❌] Error fetching from Maven API: {e}\")\n",
+    "\n",
+    "    # Fallback: Scrape MvnRepository for homepage\n",
+    "    mvn_repo_url = f\"https://mvnrepository.com/artifact/{group_id}/{artifact_id}\"\n",
+    "    try:\n",
+    "        response = requests.get(mvn_repo_url, timeout=5)\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "            homepage_link = soup.find(\"a\", text=\"Homepage\")\n",
+    "            if homepage_link:\n",
+    "                return urljoin(mvn_repo_url, homepage_link[\"href\"])  # ✅ Scraped real homepage\n",
+    "\n",
+    "    except requests.RequestException:\n",
+    "        pass  # Ignore scraping failure\n",
+    "\n",
+    "    return None  # ❌ No homepage found\n",
     "\n",
     "def fetch_dependency_insights(dep):\n",
+    "    \"\"\"Fetch insights for a given dependency.\"\"\"\n",
     "    dep_name = dep[\"artifact_id\"]\n",
-    "    homepage_url = dep[\"homepage\"]\n",
     "    group_id = dep[\"group_id\"]\n",
+    "    \n",
+    "    homepage_url = get_homepage_from_maven(group_id, dep_name)\n",
+    "    if not homepage_url:\n",
+    "        print(f\"[⚠️] No homepage found for {dep_name}. Skipping...\")\n",
+    "        return\n",
+    "    \n",
     "    print(f\"\\n--- Fetching insights for {dep_name} ---\")\n",
     "    print(f\"🌐 Scraping official site: {homepage_url}\")\n",
     "\n",
     "    insights = {}\n",
     "\n",
-    "    # GitHub-based projects\n",
-    "    if \"github.com\" in homepage_url:\n",
-    "        repo_path = homepage_url.replace(\"https://github.com/\", \"\").strip(\"/\")\n",
-    "        insights[\"SECURITY\"] = f\"https://github.com/{repo_path}/security\"\n",
-    "        insights[\"RELEASE\"] = f\"https://github.com/{repo_path}/releases\"\n",
-    "        insights[\"MIGRATION\"] = f\"https://github.com/{repo_path}/wiki/Migration-Guide\"\n",
+    "    # Scrape homepage content\n",
+    "    try:\n",
+    "        response = requests.get(homepage_url, timeout=5)\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "            text_content = \"\\n\".join([p.get_text(strip=True) for p in soup.find_all(\"p\")][:5])\n",
+    "            insights[\"SCRAPED_CONTENT\"] = text_content if text_content else \"[No readable content found]\"\n",
+    "        else:\n",
+    "            insights[\"ERROR\"] = f\"Failed to fetch page, status code: {response.status_code}\"\n",
+    "    \n",
+    "    except requests.RequestException as e:\n",
+    "        insights[\"ERROR\"] = f\"Request failed: {e}\"\n",
     "\n",
-    "        # Check for changelogs\n",
-    "        for file in CHANGELOG_FILENAMES:\n",
-    "            changelog_url = f\"https://github.com/{repo_path}/blob/main/{file}\"\n",
-    "            response = requests.head(changelog_url)\n",
-    "            if response.status_code == 200:\n",
-    "                insights[\"CHANGELOG\"] = changelog_url\n",
-    "                break\n",
-    "\n",
-    "    else:\n",
-    "        # General scraping for non-GitHub dependencies\n",
-    "        try:\n",
-    "            response = requests.get(homepage_url, timeout=5)\n",
-    "            if response.status_code == 200:\n",
-    "                soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "                links = {a.text.strip().lower(): urljoin(homepage_url, a[\"href\"]) for a in soup.find_all(\"a\", href=True)}\n",
-    "\n",
-    "                # Match links based on keywords\n",
-    "                keyword_map = {\n",
-    "                    \"SECURITY\": [\"security\", \"vulnerabilities\", \"cve\"],\n",
-    "                    \"RELEASE\": [\"release\", \"changelog\", \"changes\"],\n",
-    "                    \"MIGRATION\": [\"migration\", \"upgrade\"]\n",
-    "                }\n",
-    "\n",
-    "                for category, keywords in keyword_map.items():\n",
-    "                    for keyword in keywords:\n",
-    "                        for link_text, link_url in links.items():\n",
-    "                            if keyword in link_text:\n",
-    "                                insights[category] = link_url\n",
-    "                                break\n",
-    "\n",
-    "        except requests.RequestException:\n",
-    "            print(f\"[❌] Failed to fetch {homepage_url}\")\n",
-    "\n",
-    "    # ✅ **Fallback Mechanism**\n",
-    "    if not insights.get(\"RELEASE\") or not insights.get(\"SECURITY\"):\n",
-    "        fallback_maven_url = f\"https://repo1.maven.org/maven2/{group_id.replace('.', '/')}/{dep_name}/\"\n",
-    "        print(f\"[🔄] Fallback: Checking Maven Repository → {fallback_maven_url}\")\n",
-    "        insights[\"MAVEN_REPO\"] = fallback_maven_url\n",
-    "\n",
-    "    if dep_name.startswith(\"bcprov\"):  # Special case for BouncyCastle\n",
-    "        insights[\"DOCS\"] = \"https://www.bouncycastle.org/documentation.html\"\n",
-    "\n",
-    "    # Print results\n",
-    "    for category, link in insights.items():\n",
-    "        print(f\"[{category.upper()}] {link}\")\n",
+    "    # Print extracted content\n",
+    "    for category, content in insights.items():\n",
+    "        print(f\"\\n[{category.upper()}]\\n{content}\\n\")\n",
     "\n",
     "# Run for all test dependencies\n",
     "for dep in dependencies:\n",
     "    fetch_dependency_insights(dep)\n",
+    "\n",
+    "print(\"\\n--- Done Testing ---\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Fetching insights for guava ---\n",
+      "🌐 Scraping official site: https://github.com/google/guava\n",
+      "\n",
+      "[SCRAPED_CONTENT]\n",
+      "We read every piece of feedback, and take your input very seriously.\n",
+      "To see all available qualifiers, see ourdocumentation.\n",
+      "Google core libraries for Java\n",
+      "\n",
+      "Guava is a set of core Java libraries from Google that includes new collection\n",
+      "types (such as multimap and multiset), immutable collections, a graph library,\n",
+      "and utilities for concurrency, I/O, hashing, primitives, strings, and more! It\n",
+      "is widely used on most Java projects within Google, and widely used by many\n",
+      "other companies as well.\n",
+      "\n",
+      "\n",
+      "--- Done Testing ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "# Test dependency (only the first one)\n",
+    "dependency = {\n",
+    "    \"group_id\": \"com.google.guava\",\n",
+    "    \"artifact_id\": \"guava\",\n",
+    "    \"homepage\": \"https://github.com/google/guava\"\n",
+    "}\n",
+    "\n",
+    "def fetch_dependency_insights(dep):\n",
+    "    dep_name = dep[\"artifact_id\"]\n",
+    "    homepage_url = dep[\"homepage\"]\n",
+    "    print(f\"\\n--- Fetching insights for {dep_name} ---\")\n",
+    "    print(f\"🌐 Scraping official site: {homepage_url}\")\n",
+    "\n",
+    "    insights = {}\n",
+    "\n",
+    "    # Fetch and scrape webpage content\n",
+    "    try:\n",
+    "        response = requests.get(homepage_url, timeout=5)\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
+    "            # Extract main content (limit text length for readability)\n",
+    "            text_content = \"\\n\".join([p.get_text(strip=True) for p in soup.find_all(\"p\")][:5])\n",
+    "\n",
+    "            insights[\"SCRAPED_CONTENT\"] = text_content if text_content else \"[No readable content found]\"\n",
+    "        else:\n",
+    "            insights[\"ERROR\"] = f\"Failed to fetch page, status code: {response.status_code}\"\n",
+    "    \n",
+    "    except requests.RequestException as e:\n",
+    "        insights[\"ERROR\"] = f\"Request failed: {e}\"\n",
+    "\n",
+    "    # Print extracted content\n",
+    "    for category, content in insights.items():\n",
+    "        print(f\"\\n[{category.upper()}]\\n{content}\\n\")\n",
+    "\n",
+    "# Run for the first test dependency\n",
+    "fetch_dependency_insights(dependency)\n",
     "\n",
     "print(\"\\n--- Done Testing ---\")\n"
    ]
