Experiment script to Read pom.xml from github repo using Personal Access Token

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Srikanth/Projects/adu-ai-agent/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question: What is the color of the sky?\n",
-      "Predicted Answer: Blue on a sunny day\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Establish a connection with an LLM using Groq API key and the `dspy` library \n",
     "\n",
@@ -67,24 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[⚠️] No homepage found for guava. Skipping...\n",
-      "[⚠️] No homepage found for okhttp. Skipping...\n",
-      "[⚠️] No homepage found for commons-lang3. Skipping...\n",
-      "[⚠️] No homepage found for hibernate-core. Skipping...\n",
-      "[⚠️] No homepage found for flyway-core. Skipping...\n",
-      "[⚠️] No homepage found for bcprov-jdk15on. Skipping...\n",
-      "\n",
-      "--- Done Testing ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -92,77 +60,78 @@
     "\n",
     "# Test dependencies\n",
     "dependencies = [\n",
-    "    {\"group_id\": \"com.google.guava\", \"artifact_id\": \"guava\"},\n",
-    "    {\"group_id\": \"com.squareup.okhttp3\", \"artifact_id\": \"okhttp\"},\n",
-    "    {\"group_id\": \"org.apache.commons\", \"artifact_id\": \"commons-lang3\"},\n",
-    "    {\"group_id\": \"org.hibernate\", \"artifact_id\": \"hibernate-core\"},\n",
-    "    {\"group_id\": \"org.flywaydb\", \"artifact_id\": \"flyway-core\"},\n",
-    "    {\"group_id\": \"org.bouncycastle\", \"artifact_id\": \"bcprov-jdk15on\"}\n",
+    "    {\"group_id\": \"com.google.guava\", \"artifact_id\": \"guava\", \"homepage\": \"https://github.com/google/guava\"},\n",
+    "    {\"group_id\": \"com.squareup.okhttp3\", \"artifact_id\": \"okhttp\", \"homepage\": \"https://github.com/square/okhttp\"},\n",
+    "    {\"group_id\": \"org.apache.commons\", \"artifact_id\": \"commons-lang3\", \"homepage\": \"https://commons.apache.org/proper/commons-lang/\"},\n",
+    "    {\"group_id\": \"org.hibernate\", \"artifact_id\": \"hibernate-core\", \"homepage\": \"https://hibernate.org/orm/\"},\n",
+    "    {\"group_id\": \"org.flywaydb\", \"artifact_id\": \"flyway-core\", \"homepage\": \"https://flywaydb.org/\"},\n",
+    "    {\"group_id\": \"org.bouncycastle\", \"artifact_id\": \"bcprov-jdk15on\", \"homepage\": \"https://www.bouncycastle.org/\"}\n",
     "]\n",
     "\n",
-    "def get_homepage_from_maven(group_id, artifact_id):\n",
-    "    \"\"\"Fetch correct homepage URL from Maven Search API or fallback to MvnRepository.\"\"\"\n",
-    "    search_url = f\"https://search.maven.org/solrsearch/select?q=g:%22{group_id}%22+AND+a:%22{artifact_id}%22&rows=1&wt=json\"\n",
-    "    \n",
-    "    try:\n",
-    "        response = requests.get(search_url, timeout=5)\n",
-    "        data = response.json()\n",
-    "        \n",
-    "        if \"response\" in data and data[\"response\"][\"docs\"]:\n",
-    "            doc = data[\"response\"][\"docs\"][0]\n",
-    "            homepage_url = doc.get(\"homepage\", None)\n",
-    "            if homepage_url:\n",
-    "                return homepage_url  # ✅ Found real homepage from API\n",
-    "        \n",
-    "    except requests.RequestException as e:\n",
-    "        print(f\"[❌] Error fetching from Maven API: {e}\")\n",
-    "\n",
-    "    # Fallback: Scrape MvnRepository for homepage\n",
-    "    mvn_repo_url = f\"https://mvnrepository.com/artifact/{group_id}/{artifact_id}\"\n",
-    "    try:\n",
-    "        response = requests.get(mvn_repo_url, timeout=5)\n",
-    "        if response.status_code == 200:\n",
-    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "            homepage_link = soup.find(\"a\", text=\"Homepage\")\n",
-    "            if homepage_link:\n",
-    "                return urljoin(mvn_repo_url, homepage_link[\"href\"])  # ✅ Scraped real homepage\n",
-    "\n",
-    "    except requests.RequestException:\n",
-    "        pass  # Ignore scraping failure\n",
-    "\n",
-    "    return None  # ❌ No homepage found\n",
+    "# Common changelog filenames for GitHub projects\n",
+    "CHANGELOG_FILENAMES = [\"CHANGELOG.md\", \"CHANGELOG.txt\", \"docs/changelog.md\", \"HISTORY.md\", \"RELEASE-NOTES.md\"]\n",
     "\n",
     "def fetch_dependency_insights(dep):\n",
-    "    \"\"\"Fetch insights for a given dependency.\"\"\"\n",
     "    dep_name = dep[\"artifact_id\"]\n",
+    "    homepage_url = dep[\"homepage\"]\n",
     "    group_id = dep[\"group_id\"]\n",
-    "    \n",
-    "    homepage_url = get_homepage_from_maven(group_id, dep_name)\n",
-    "    if not homepage_url:\n",
-    "        print(f\"[⚠️] No homepage found for {dep_name}. Skipping...\")\n",
-    "        return\n",
-    "    \n",
     "    print(f\"\\n--- Fetching insights for {dep_name} ---\")\n",
     "    print(f\"🌐 Scraping official site: {homepage_url}\")\n",
     "\n",
     "    insights = {}\n",
     "\n",
-    "    # Scrape homepage content\n",
-    "    try:\n",
-    "        response = requests.get(homepage_url, timeout=5)\n",
-    "        if response.status_code == 200:\n",
-    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "            text_content = \"\\n\".join([p.get_text(strip=True) for p in soup.find_all(\"p\")][:5])\n",
-    "            insights[\"SCRAPED_CONTENT\"] = text_content if text_content else \"[No readable content found]\"\n",
-    "        else:\n",
-    "            insights[\"ERROR\"] = f\"Failed to fetch page, status code: {response.status_code}\"\n",
-    "    \n",
-    "    except requests.RequestException as e:\n",
-    "        insights[\"ERROR\"] = f\"Request failed: {e}\"\n",
+    "    # GitHub-based projects\n",
+    "    if \"github.com\" in homepage_url:\n",
+    "        repo_path = homepage_url.replace(\"https://github.com/\", \"\").strip(\"/\")\n",
+    "        insights[\"SECURITY\"] = f\"https://github.com/{repo_path}/security\"\n",
+    "        insights[\"RELEASE\"] = f\"https://github.com/{repo_path}/releases\"\n",
+    "        insights[\"MIGRATION\"] = f\"https://github.com/{repo_path}/wiki/Migration-Guide\"\n",
     "\n",
-    "    # Print extracted content\n",
-    "    for category, content in insights.items():\n",
-    "        print(f\"\\n[{category.upper()}]\\n{content}\\n\")\n",
+    "        # Check for changelogs\n",
+    "        for file in CHANGELOG_FILENAMES:\n",
+    "            changelog_url = f\"https://github.com/{repo_path}/blob/main/{file}\"\n",
+    "            response = requests.head(changelog_url)\n",
+    "            if response.status_code == 200:\n",
+    "                insights[\"CHANGELOG\"] = changelog_url\n",
+    "                break\n",
+    "\n",
+    "    else:\n",
+    "        # General scraping for non-GitHub dependencies\n",
+    "        try:\n",
+    "            response = requests.get(homepage_url, timeout=5)\n",
+    "            if response.status_code == 200:\n",
+    "                soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "                links = {a.text.strip().lower(): urljoin(homepage_url, a[\"href\"]) for a in soup.find_all(\"a\", href=True)}\n",
+    "\n",
+    "                # Match links based on keywords\n",
+    "                keyword_map = {\n",
+    "                    \"SECURITY\": [\"security\", \"vulnerabilities\", \"cve\"],\n",
+    "                    \"RELEASE\": [\"release\", \"changelog\", \"changes\"],\n",
+    "                    \"MIGRATION\": [\"migration\", \"upgrade\"]\n",
+    "                }\n",
+    "\n",
+    "                for category, keywords in keyword_map.items():\n",
+    "                    for keyword in keywords:\n",
+    "                        for link_text, link_url in links.items():\n",
+    "                            if keyword in link_text:\n",
+    "                                insights[category] = link_url\n",
+    "                                break\n",
+    "\n",
+    "        except requests.RequestException:\n",
+    "            print(f\"[❌] Failed to fetch {homepage_url}\")\n",
+    "\n",
+    "    # ✅ **Fallback Mechanism**\n",
+    "    if not insights.get(\"RELEASE\") or not insights.get(\"SECURITY\"):\n",
+    "        fallback_maven_url = f\"https://repo1.maven.org/maven2/{group_id.replace('.', '/')}/{dep_name}/\"\n",
+    "        print(f\"[🔄] Fallback: Checking Maven Repository → {fallback_maven_url}\")\n",
+    "        insights[\"MAVEN_REPO\"] = fallback_maven_url\n",
+    "\n",
+    "    if dep_name.startswith(\"bcprov\"):  # Special case for BouncyCastle\n",
+    "        insights[\"DOCS\"] = \"https://www.bouncycastle.org/documentation.html\"\n",
+    "\n",
+    "    # Print results\n",
+    "    for category, link in insights.items():\n",
+    "        print(f\"[{category.upper()}] {link}\")\n",
     "\n",
     "# Run for all test dependencies\n",
     "for dep in dependencies:\n",
@@ -173,77 +142,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Fetching insights for guava ---\n",
-      "🌐 Scraping official site: https://github.com/google/guava\n",
-      "\n",
-      "[SCRAPED_CONTENT]\n",
-      "We read every piece of feedback, and take your input very seriously.\n",
-      "To see all available qualifiers, see ourdocumentation.\n",
-      "Google core libraries for Java\n",
-      "\n",
-      "Guava is a set of core Java libraries from Google that includes new collection\n",
-      "types (such as multimap and multiset), immutable collections, a graph library,\n",
-      "and utilities for concurrency, I/O, hashing, primitives, strings, and more! It\n",
-      "is widely used on most Java projects within Google, and widely used by many\n",
-      "other companies as well.\n",
-      "\n",
-      "\n",
-      "--- Done Testing ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Fetch pom.xml from GitHub repository using Personal Access Token\n",
+    "\n",
+    "import os\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from urllib.parse import urljoin\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# Test dependency (only the first one)\n",
-    "dependency = {\n",
-    "    \"group_id\": \"com.google.guava\",\n",
-    "    \"artifact_id\": \"guava\",\n",
-    "    \"homepage\": \"https://github.com/google/guava\"\n",
-    "}\n",
+    "# Load environment variables\n",
+    "load_dotenv()\n",
     "\n",
-    "def fetch_dependency_insights(dep):\n",
-    "    dep_name = dep[\"artifact_id\"]\n",
-    "    homepage_url = dep[\"homepage\"]\n",
-    "    print(f\"\\n--- Fetching insights for {dep_name} ---\")\n",
-    "    print(f\"🌐 Scraping official site: {homepage_url}\")\n",
-    "\n",
-    "    insights = {}\n",
-    "\n",
-    "    # Fetch and scrape webpage content\n",
-    "    try:\n",
-    "        response = requests.get(homepage_url, timeout=5)\n",
-    "        if response.status_code == 200:\n",
-    "            soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "\n",
-    "            # Extract main content (limit text length for readability)\n",
-    "            text_content = \"\\n\".join([p.get_text(strip=True) for p in soup.find_all(\"p\")][:5])\n",
-    "\n",
-    "            insights[\"SCRAPED_CONTENT\"] = text_content if text_content else \"[No readable content found]\"\n",
-    "        else:\n",
-    "            insights[\"ERROR\"] = f\"Failed to fetch page, status code: {response.status_code}\"\n",
+    "def fetch_github_file(owner: str, repo: str, path: str, branch: str = \"main\") -> str:\n",
+    "    \"\"\"\n",
+    "    Fetch a file from GitHub repository using Personal Access Token.\n",
     "    \n",
-    "    except requests.RequestException as e:\n",
-    "        insights[\"ERROR\"] = f\"Request failed: {e}\"\n",
+    "    Args:\n",
+    "        owner (str): GitHub repository owner/organization\n",
+    "        repo (str): Repository name\n",
+    "        path (str): Path to file in the repository\n",
+    "        branch (str): Branch name (default: main)\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: Content of the file\n",
+    "    \"\"\"\n",
+    "    # Construct raw content URL\n",
+    "    url = f\"https://raw.githubusercontent.com/{owner}/{repo}/{branch}/{path}\"\n",
     "\n",
-    "    # Print extracted content\n",
-    "    for category, content in insights.items():\n",
-    "        print(f\"\\n[{category.upper()}]\\n{content}\\n\")\n",
+    "    # Get GitHub token from environment\n",
+    "    # PERSONAL_ACCESS_TOKEN = os.getenv(\"GIT_TOKEN\")\n",
+    "    # PERSONAL_ACCESS_TOKEN = os.getenv(\"GITHUB_TOKEN\")\n",
+    "    # if not PERSONAL_ACCESS_TOKEN:\n",
+    "    #     raise ValueError(\"GITHUB_TOKEN not found in .env file\")\n",
+    "    \n",
+    "    # Set up headers with token\n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"Bearer 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\",\n",
+    "        \"Accept\": \"application/vnd.github.v3.raw\"\n",
+    "    }\n",
+    "    \n",
+    "    # Make request\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        return response.text\n",
+    "    else:\n",
+    "        raise Exception(f\"Failed to fetch file. Status: {response.status_code}\\nMessage: {response.text}\")\n",
     "\n",
-    "# Run for the first test dependency\n",
-    "fetch_dependency_insights(dependency)\n",
+    "# Example usage\n",
+    "try:\n",
+    "    # Replace with actual repository details\n",
+    "    pom_content = fetch_github_file(\n",
+    "        owner=\"techneo1\",\n",
+    "        repo=\"AI-Engineering\",\n",
+    "        path=\"pom.xml\",\n",
+    "        branch=\"master\"\n",
+    "    )\n",
     "\n",
-    "print(\"\\n--- Done Testing ---\")\n"
+    "    # pom_content = fetch_github_file(\n",
+    "    #     owner=\"vinitdadyala\",\n",
+    "    #     repo=\"adu-ai-agent\",\n",
+    "    #     path=\"pom.xml\",\n",
+    "    #     branch=\"master\"\n",
+    "    # )\n",
+    "    \n",
+    "    print(\"Successfully fetched pom.xml:\")\n",
+    "    print(f\"{pom_content}...\")\n",
+    "    \n",
+    "    # Optionally save to file\n",
+    "    # with open(\"downloaded_pom.xml\", \"w\") as f:\n",
+    "    #     f.write(pom_content)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {str(e)}\")"
    ]
   }
  ],
@@ -263,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
