Analyse dependencies of pom.xml fetched from Github URL

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -142,9 +142,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully fetched pom.xml:\n",
+      "<project xmlns=\"http://maven.apache.org/POM/4.0.0\"\n",
+      "         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n",
+      "         xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">\n",
+      "    <modelVersion>4.0.0</modelVersion>\n",
+      "\n",
+      "    <groupId>com.example</groupId>\n",
+      "    <artifactId>dependency-analyzer</artifactId>\n",
+      "    <version>1.0.0</version>\n",
+      "\n",
+      "    <dependencies>\n",
+      "        <dependency>\n",
+      "            <groupId>com.google.guava</groupId>\n",
+      "            <artifactId>guava</artifactId>\n",
+      "            <version>32.0.0-jre</version>\n",
+      "        </dependency>\n",
+      "\n",
+      "        <dependency>\n",
+      "            <groupId>com.squareup.okhttp3</groupId>\n",
+      "            <artifactId>okhttp</artifactId>\n",
+      "            <version>4.11.0</version>\n",
+      "        </dependency>\n",
+      "\n",
+      "        <dependency>\n",
+      "            <groupId>org.apache.commons</groupId>\n",
+      "            <artifactId>commons-lang3</artifactId>\n",
+      "            <version>3.13.0</version>\n",
+      "        </dependency>\n",
+      "\n",
+      "        <dependency>\n",
+      "            <groupId>org.hibernate</groupId>\n",
+      "            <artifactId>hibernate-core</artifactId>\n",
+      "            <version>6.3.1.Final</version>\n",
+      "        </dependency>\n",
+      "\n",
+      "        <dependency>\n",
+      "            <groupId>org.flywaydb</groupId>\n",
+      "            <artifactId>flyway-core</artifactId>\n",
+      "            <version>9.22.3</version>\n",
+      "        </dependency>\n",
+      "\n",
+      "        <dependency>\n",
+      "            <groupId>org.bouncycastle</groupId>\n",
+      "            <artifactId>bcprov-jdk15on</artifactId>\n",
+      "            <version>1.76</version>\n",
+      "        </dependency>\n",
+      "    </dependencies>\n",
+      "</project>\n",
+      "...\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch pom.xml from GitHub repository using Personal Access Token\n",
     "\n",
