--- a/playground.ipynb
+++ b/playground.ipynb
@@ -274,6 +274,37 @@
     "except Exception as e:\n",
     "    print(f\"Error: {str(e)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\tmp\\test\\HelloWorldSample\\src\\main\\java\\com\\example\\StringUtilsExample.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def find_java_files(base_dir):\n",
+    "    java_files = []\n",
+    "    for root, _, files in os.walk(base_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".java\"):\n",
+    "                java_files.append(os.path.join(root, file))\n",
+    "    return java_files\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    base_dir = r\"C:\\tmp\\test\\HelloWorldSample\"\n",
+    "    java_files = find_java_files(base_dir)\n",
+    "    for jf in java_files:\n",
+    "        print(jf)"
+   ]
   }
  ],
  "metadata": {
@@ -292,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
